@@ -1,4 +1,5 @@
 Version 5.11.0
+* [DXFC-182] The new order (price level) sources were added: ntv, glbx, xeur
 * [DXFC-178] Added the ability to log received and transmitted data blocks
   - [API] The `NativeTools.InitializeLogging` function extended by optional parameter `logDataTransfer`
     This flag defining the logging mode; if it's `true` then the data transfer (portions of received and sent data) logging will be enabled.
